# crustword

./: Cargo.toml  README.md
crosswords/: crustword  generated  svenska  日本語
src/: args.rs  crossword.rs  main.rs  util.rs
src/crossword/: fmt.rs  gen.rs  parse.rs  solver.rs
